k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel
  namespace: hotel
spec:
  selector:
    app: hotel
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
