k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel
  namespace: hotel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hotel.local
      secretName: hotel-tls
  rules:
    - host: hotel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel
                port:
                  number: 80
